# python_experiments

./: README.md
base_template/: docker-compose.yaml
base_template/config/: postgresql.conf
python_celery_context/: Dockerfile  README.md  docker-compose.yaml  postgres.Dockerfile  pyproject.toml
python_celery_context/app/: __init__.py  app.py  celeryconfig.py  runcelery.py
python_celery_context/app/tasks/: workers.py
python_celery_context/app/utility/: celery_util.py
