[tool.poetry]
name = "python-experiment"
version = "0.1.0"
description = "Base template"
authors = ["joel <joelvictor1746@gmail.com>"]
readme = "README.md"
packages = [{include = "python_experiment"}]

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.12.0"
celery = "^5.2.7"
flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
